# RRL_Robotic_Arm

./: README.md
Robot Arm 6dof/Models/: box_blue.sdf.template  box_red.sdf.template  box_yellow.sdf.template  control.dic  plate_left.sdf.template  plate_middle.sdf.template  table.sdf.template
Robot Arm 6dof/plugins/world_control/: ArmController.cc  ArmController.hh  ArmStructure.cc  ArmStructure.hh  ContactsManager.cc  ContactsManager.hh  GripperController.cc  GripperController.hh  InverseKinematics.cc  InverseKinematics.hh  JointsController.cc  Parameters.cc  Parameters.hh  Statistics.hh  WorldView.cc  WorldView.hh  armworld_plugin.cc  template.cc  template.hh
Tests/Grabbing/: arm.world  install.sh  setup.sh
Tests/Grabbing/Models/: arm.sdf.template  box_blue.sdf.template  control.dic  dictionary.dic  table.sdf.template
Tests/Grabbing/Python/: CSVParser.py  DataAnalysis12.ipynb
Tests/Grabbing/Python/.ipynb_checkpoints/: DataAnalysis12-checkpoint.ipynb  DataAnalysis15-checkpoint.ipynb
Tests/Grabbing/plugins/world_control/: ArmController.cc  (+17 more)
Tests/Inverse Kinematic/Models/: arm.sdf.template  box_red.sdf.template  control.dic  dictionary.dic
Tests/Inverse Kinematic/Python/: DataAnalysis.ipynb
Tests/Stacking/: arm.world  install.sh
Tests/Stacking/Models/: arm.sdf.template  box_green.sdf.template  box_red.sdf.template  control.dic  dictionary.dic  plate_right.sdf.template
Tests/Stacking/plugins/world_control/: ArmController.cc  ArmController.hh  CMakeLists arm.txt  CMakeLists.txt  JointsController.hh  Statistics.cc  WorldView.cc  armworld_plugin.cc
(+18 files in other folders)
